Source/MediaInfoDLL/MediaInfoDLL.h


typedef void* (__stdcall *MEDIAINFO_New)();
 static MEDIAINFO_New MediaInfo_New;

typedef void (__stdcall *MEDIAINFO_Delete)(void*);
 static MEDIAINFO_Delete MediaInfo_Delete;

typedef size_t (__stdcall *MEDIAINFO_Open)(void*, const MediaInfo_Char*);
 static MEDIAINFO_Open MediaInfo_Open;

typedef void (__stdcall *MEDIAINFO_Close)(void*);
 static MEDIAINFO_Close MediaInfo_Close;

typedef const MediaInfo_Char* (__stdcall *MEDIAINFO_Inform)(void*, size_t Reserved);
 static MEDIAINFO_Inform MediaInfo_Inform;

typedef const MediaInfo_Char* (__stdcall *MEDIAINFO_GetI)(void*, MediaInfo_stream_C StreamKind, size_t StreamNumber, size_t Parameter, MediaInfo_info_C KindOfInfo);
 static MEDIAINFO_GetI MediaInfo_GetI;

typedef const MediaInfo_Char* (__stdcall *MEDIAINFO_Get)(void*, MediaInfo_stream_C StreamKind, size_t StreamNumber, const MediaInfo_Char* Parameter, MediaInfo_info_C KindOfInfo, MediaInfo_info_C KindOfSearch);
 static MEDIAINFO_Get MediaInfo_Get;

typedef const MediaInfo_Char* (__stdcall *MEDIAINFO_Option)(void*, const MediaInfo_Char* Parameter, const MediaInfo_Char* Value);
 static MEDIAINFO_Option MediaInfo_Option;

typedef size_t (__stdcall *MEDIAINFO_State_Get)(void*);
 static MEDIAINFO_State_Get MediaInfo_State_Get;

typedef size_t (__stdcall *MEDIAINFO_Count_Get)(void*, MediaInfo_stream_C StreamKind, size_t StreamNumber);
 static MEDIAINFO_Count_Get MediaInfo_Count_Get;
    typedef wchar_t Char;
    typedef char Char;
typedef std::basic_string<Char>        String;